--- a/assets/scss/startPage.scss
+++ b/assets/scss/startPage.scss
@@ -7,6 +7,8 @@
 @import "utilities/helpers";
 
 @import "elements/buttons";
+@import "elements/footer";
+@import "elements/alert";
 
 .startPage {
     background: #222222;
@@ -14,12 +16,90 @@
     color: $gray-700;
     font-size: 14px;
     min-height: 100vh;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column ;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     .brand {
         max-width: 220px;
         height: auto;
         display: block;
         margin: 0 auto 50px;
+    }
 
+    .nav-tabs {
+        border-bottom: 0;
+        .nav-item {
+            width: 50%;
+            text-align: center;
+
+            @media (min-width: 576px) {
+                &:first-child .active {
+                    margin-right: -3px;
+                }
+                &:last-child .active {
+                    margin-left: -3px;
+                }
+            }
+            @media (max-width: 575px) {
+                width: 100%;
+            }
+
+
+            .nav-link {
+                border: 3px solid $gray-300;
+                border-radius: 0;
+                padding: 10px 20px;
+                font-size: 24px;
+                color: $black;
+                &.active {
+                    position: relative;
+                    border-color: $app-color-1;
+                    z-index: 1;
+                }
+            }
+        }
+    }
+
+
+
+
+    .bg-white {
+        position: relative;
+    }
+
+    .form-control-pass {
+        position: relative;
+        .btn-pass {
+            position: absolute;
+            font-size: 18px;
+            box-shadow: none;
+            top: 0;
+            right: 0;
+            height: 38px;
+            padding: 5px;
+            cursor: pointer;
+            .icon-eye-slash {
+                display: none;
+            }
+            &.active {
+                .icon-eye-slash {
+                    display: block;
+                }
+                .icon-eye {
+                    display: none;
+                }
+            }
+            &.active {
+                color: $app-color-1;
+            }
+            &:focus,
+            &:hover {
+                box-shadow: none;
+            }
+        }
     }
 
     h2 {
@@ -32,10 +112,62 @@
         }
     }
 
+
+    .backward {
+        margin-bottom: 20px;
+        margin-top: -25px;
+
+        a {
+            color: $gray-900;
+            font-size: 16px;
+            text-decoration: none;
+            position: relative;
+            &::after {
+                content: "";
+                position: absolute;
+                width: 0;
+                height: 2px;
+                background: $gray-900;
+                top: 100%;
+                margin-top: 4px;
+                left: 36px;
+                -webkit-transition: width 0.2s ease-out;
+                transition: width 0.2s ease-out;
+            }
+            &:hover::after {
+                width: calc(100% - 36px);
+            }
+            i {
+                color: $app-color-1;
+                font-size: 24px;
+                margin-right: 10px;
+                display: inline-block;
+                vertical-align: middle;
+                margin-bottom: 2px;
+            }
+            &:focus,
+            &:hover {
+                text-decoration: none;
+                color: $gray-900;
+            }
+        }
+    }
+
     .text-muted {
         a {
             color: $gray-400;
         }
+    }
+
+    .form-group {
+        label {
+            color: $gray-400;
+            margin-bottom: 0;
+        }
+    }
+
+    .form-control {
+        padding-left: 0;
     }
 
     .form-control:focus,
@@ -84,7 +216,7 @@
         }
     }
 
-    a {
+    a:not([class]) {
         color: $gray-700;
         &:focus,
         &:hover {
