--- a/assets/icomoon/style.css
+++ b/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?bjccg9');
-  src:  url('fonts/icomoon.eot?bjccg9#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?bjccg9') format('truetype'),
-    url('fonts/icomoon.woff?bjccg9') format('woff'),
-    url('fonts/icomoon.svg?bjccg9#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?tv6vjy');
+  src:  url('fonts/icomoon.eot?tv6vjy#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?tv6vjy') format('truetype'),
+    url('fonts/icomoon.woff?tv6vjy') format('woff'),
+    url('fonts/icomoon.svg?tv6vjy#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -27,8 +27,17 @@
 .icon-close:before {
   content: "\e90e";
 }
+.icon-danger:before {
+  content: "\e910";
+}
+.icon-info:before {
+  content: "\e90f";
+}
 .icon-menu:before {
   content: "\e908";
+}
+.icon-eye-slash:before {
+  content: "\e911";
 }
 .icon-warning:before {
   content: "\e90b";
