--- a/assets/scss/elements/_buttons.scss
+++ b/assets/scss/elements/_buttons.scss
@@ -38,6 +38,7 @@
         border-bottom: 4px solid $app-color-1;
         color: black;
         text-decoration: none;
+        box-shadow: none;
     }
 }
 
@@ -49,6 +50,7 @@
     &:hover {
         background: white;
         color: black;
+        box-shadow: none;
     }
 }
 
@@ -56,10 +58,18 @@
     background: black;
     border: 1px solid black;
     color: white;
+    i {
+        color: $app-color-1;
+    }
     &:focus,
     &:hover {
-        background: white;
-        color: black;
+        border: 1px solid $app-color-1;
+        background: $app-color-1;
+        color: white;
+        box-shadow: none;
+        i {
+            color: white;
+        }
     }
 }
 
@@ -67,10 +77,18 @@
     background: transparent;
     border: 1px solid black;
     color: black;
+    i {
+        color: $app-color-1;
+    }
     &:focus,
     &:hover {
-        background: black;
+        border: 1px solid $app-color-1;
+        background: $app-color-1;
         color: white;
+        box-shadow: none;
+        i {
+            color: white;
+        }
     }
 }
 
@@ -91,6 +109,18 @@
         &:hover {
             color: $app-color-1;
         }
+    }
+}
+
+.btn-lg {
+    padding: 10px 40px;
+    font-size: 1rem;
+    min-width: 200px;
+    letter-spacing: 1px;
+    i {
+        position: absolute;
+        right: 34px;
+        font-size: 1.4rem;
     }
 }
 
