--- a/assets/scss/elements/_footer.scss
+++ b/assets/scss/elements/_footer.scss
@@ -13,7 +13,7 @@ footer {
     .container {
         font-size: 14px;
         .brand {
-            margin-bottom: 32px;
+            margin: 0 0 32px;
             display: block;
             img {
                 width: 232px;
