--- a/assets/scss/elements/_breadcrumb.scss
+++ b/assets/scss/elements/_breadcrumb.scss
@@ -75,9 +75,7 @@
             color: $gray-900;
         }
     }
-
 }
-
 
 .breadcrumb {
     padding: 0;
@@ -89,10 +87,7 @@
         font-size: 24px;
     }
     @media (max-width: 767px) {
-        font-size: 18px;
-    }
-    @media (max-width: 575px) {
-        font-size: 16px;
+        font-size: 20px;
     }
     border-bottom: 1px solid $gray-900;
     .breadcrumb-item {
@@ -105,6 +100,23 @@
             color: $gray-900;
             font-weight: 600;
             letter-spacing: 2px;
+        }
+    }
+
+    .btn.btn-link {
+        box-shadow: none;
+        font-weight: normal;
+        color: $black;
+        padding-top: 3px;
+        padding-left: 6px;
+        padding-right: 6px;
+        @media (max-width: 991px) {
+            margin-top: 20px;
+            margin-bottom: 10px;
+            margin-left: -6px;
+        }
+        &:hover {
+            color: $app-color-1;
         }
     }
 }
