--- a/assets/icomoon/style.css
+++ b/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?tv6vjy');
-  src:  url('fonts/icomoon.eot?tv6vjy#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?tv6vjy') format('truetype'),
-    url('fonts/icomoon.woff?tv6vjy') format('woff'),
-    url('fonts/icomoon.svg?tv6vjy#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?d7dq3p');
+  src:  url('fonts/icomoon.eot?d7dq3p#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?d7dq3p') format('truetype'),
+    url('fonts/icomoon.woff?d7dq3p') format('woff'),
+    url('fonts/icomoon.svg?d7dq3p#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-calendar:before {
+  content: "\e912";
+}
 .icon-close:before {
   content: "\e90e";
 }
