--- a/assets/scss/elements/_basket.scss
+++ b/assets/scss/elements/_basket.scss
@@ -297,7 +297,9 @@
                 cursor: pointer;
                 i {
                     font-size: 18px;
+                    margin-left: auto;
                     display: block;
+                    line-height: normal;
                     width: 18px;
                     height: 18px;
                     position: relative;
