--- a/assets/scss/elements/_table.scss
+++ b/assets/scss/elements/_table.scss
@@ -88,6 +88,22 @@
     }
 }
 
+table.dataTable thead .sorting_asc {
+    background-image: url("../images/sort_asc.png") !important;
+}
+table.dataTable thead .sorting_desc {
+    background-image: url("../images/sort_desc.png") !important;
+}
+
+table.dataTable thead th,
+table.dataTable thead td {
+    border-bottom: 2px solid #dee2e6;
+}
+
+table.dataTable.no-footer {
+    border-bottom: 1px solid #e2e2e2;
+}
+
 @media (max-width: 1479px) {
 
 }
